@@ -1,0 +1,3 @@
+{
+  "message.eventz.eventcomplete": "Winners of the event: %s"
+}
