@@ -1,5 +1,7 @@
 October 4, 2021 pitbox46
 -Better error logging/error handling
+-Timed events now work
+-Localization for winner message
 
 October 4, 2021 pitbox46
 -Fixed issue with forceStart command
